Add mdsymbol package requirement

--- a/equation-sheet.cls
+++ b/equation-sheet.cls
@@ -32,6 +32,7 @@
 \RequirePackage{colortbl}
 \RequirePackage{multicol}
 \RequirePackage{enumitem}
+\RequirePackage{mdsymbol}
 
 % Page formatting
 \setlength{\columnseprule}{1pt}
