--- a/macros.tex
+++ b/macros.tex
@@ -16,8 +16,16 @@
 %   2: Exponent
 \newcommand{\scinote}[2]{#1 \, \text{x} \, 10^{#2}}
 
+% Format d for integrals
+\newcommand{\dvar}{\, \mathrm{d}}
+
 % Format a derivative (first arg w.r.t. second arg)
 \newcommand{\deriv}[2]{\dfrac{\mathrm{d}#1}{\mathrm{d}#2}}
 
 % Format a partial derivative (first arg w.r.t. second arg)
 \newcommand{\pdv}[2]{\frac {\partial #1}{\partial #2}}
+
+% Unit vectors
+\newcommand{\ihat}{\text{\textbf{i}}}
+\newcommand{\jhat}{\text{\textbf{j}}}
+\newcommand{\khat}{\text{\textbf{k}}}
