--- a/demo.tex
+++ b/demo.tex
@@ -3,8 +3,10 @@
 
 \begin{document}
 
-\subsection*{Exam 1 Material}
+\subsection{Exam 1 Material}
+
 Coulombic attraction:
+
 \begin{equation*}
 	\begin{aligned}[l]
 		F_c &= \frac{-k}{a^2} \\
@@ -30,12 +32,14 @@ Coulombic attraction:
         E &= \text{Bonding energy}
     \end{aligned}
 \end{equation*}
-\noindent Thus, zero force occurs at minimum bonding energy.
+
+Thus, zero force occurs at minimum bonding energy.
+
 \sepspace
 
 \secbreak
 
-\subsubsection*{Crystal Structures}
+\subsubsection{Crystal Structures}
 
 \begin{itemize}
     \item Lattice direction ex: $[3 \bar 1 5]$
