--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,13 @@
 \documentclass{equation-sheet}
 \input{macros}
 
+\title{Class and Exam}
+\author{My Name}
+\date{\today}
+
 \begin{document}
+
+\vfill
+\maketitle
 
 \end{document}
